game: make config loader work (again?!), debug prints adjusted
Parser requires rework!

--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -1,29 +1,32 @@
+// !!! IMPORTANT NOTE !!!
+// Ensure all values are surrounded by quotes, the parser can't properly deal with negative values otherwise.
+
 configname "^1Legacy ^*Public"
 
 public
 
 init
 {
-	setl g_altStopwatchMode 0
-	setl g_complaintlimit 6
-	setl g_ipcomplaintlimit 3
-	setl g_doWarmup 0
-	setl g_maxlives 0
-	setl g_teamforcebalance 1
-	setl g_noTeamSwitching 0
-	setl g_lms_teamForceBalance 1
-	setl g_voicechatsallowed 5
-	setl g_warmup 30
-	setl match_latejoin 1
-	setl match_mutespecs 1
-	setl match_timeoutcount 0
-	setl match_warmupDamage 0
-	setl team_maxplayers 0
-	setl team_nocontrols 1
-	setl sv_allowDownload 1
-	setl sv_floodProtect 0
-	setl sv_fps 20
-	setl vote_limit 5
+	setl g_altStopwatchMode "0"
+	setl g_complaintlimit "6"
+	setl g_ipcomplaintlimit "3"
+	setl g_doWarmup "0"
+	setl g_maxlives "0"
+	setl g_teamforcebalance "1"
+	setl g_noTeamSwitching "0"
+	setl g_lms_teamForceBalance "1"
+	setl g_voicechatsallowed "5"
+	setl g_warmup "30"
+	setl match_latejoin "1"
+	setl match_mutespecs "1"
+	setl match_timeoutcount "0"
+	setl match_warmupDamage "0"
+	setl team_maxplayers "0"
+	setl team_nocontrols "1"
+	setl sv_allowDownload "1"
+	setl sv_floodProtect "0"
+	setl sv_fps "20"
+	setl vote_limit "5"
 	
 	//command "sv_cvarempty"
 	command "sv_cvar com_maxfps IN 40 125"
