misc: adjusted default config for OB and WA, refs #1089

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -67,13 +67,13 @@ set g_intermissionReadyPercent "60"
 
 // LUA
 
-set lua_modules ""
+set lua_modules "luamods/wolfadmin/main.lua"
 set lua_allowedModules ""
 
 // OMNI-BOT
 
-//set omnibot_enable "1"
-//set omnibot_path "./legacy/omni-bot"
+set omnibot_enable "1"
+set omnibot_path "./legacy/omni-bot"
 //set omnibot_flags "0"
 //set omnibot_logsize "0"
 //bot difficulty 4
