--- a/etmain/configs/legacy5.config
+++ b/etmain/configs/legacy5.config
@@ -19,7 +19,7 @@ init
   setl g_friendlyFire "1"
   setl g_heavyWeaponRestriction "16"
   setl g_medicChargeTime "45000"
-  setl g_LTChargeTime "40000"
+  setl g_fieldopsChargeTime "40000"
   setl g_engineerChargeTime "30000"
   setl g_soldierChargeTime "30000"
   setl g_covertopschargetime "30000"
