misc: somme wolfadmin info in config files

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -4,6 +4,12 @@
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars#g_-Additional-or-changed
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
 
+
+// Important note! 
+// Many features like general player management, pm's, features known by ETPro or other common mods 
+// are moved into WolfAdmin we are shipping and installing with our installer.
+// WolfAdmin is enabled per default. Read WolfAdmin documentation: http://dev.timosmit.com/wolfadmin/ 
+
 // LOGGING & PROTECTION
 
 set g_log ""						// Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
