--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -4,6 +4,11 @@
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars#g_-Additional-or-changed
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
 
+// Important note! 
+// Many features like general player management, pm's, features known by ETPro or other common mods 
+// are moved into WolfAdmin we are shipping and installing with our installer.
+// WolfAdmin is enabled per default. Read WolfAdmin documentation: http://dev.timosmit.com/wolfadmin/
+
 // ET LEGACY ENGINE ONLY
 
 // LOGGING & PROTECTION
