misc: adjust bot settings for the very first start after install

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -82,8 +82,8 @@ set omnibot_enable "1"
 set omnibot_path "./legacy/omni-bot"
 //set omnibot_flags "0"
 //set omnibot_logsize "0"
-//bot difficulty 4
-//bot moveskill 3
-//bot minbots "-1"
-//bot maxbots "16"
-//bot balanceteams 1
+bot difficulty 4
+bot moveskill 4
+bot minbots "-1"
+bot maxbots "2"
+bot balanceteams 1
