--- a/etmain/preset_normal_ui.cfg
+++ b/etmain/preset_normal_ui.cfg
@@ -8,6 +8,7 @@ seta ui_r_fullscreen 1
 seta ui_r_texturebits 32
 seta ui_r_ext_compressed_textures 1
 seta ui_r_ext_texture_filter_anisotropic 0
+seta ui_r_ext_multisample 0
 seta ui_r_dynamiclight 1
 seta r_fastSky 0
 seta cg_shadows 1
