ui: added class selection menu in controls, refs #1133

--- a/etmain/default.cfg
+++ b/etmain/default.cfg
@@ -55,6 +55,8 @@ bind . "mapzoomin"
 bind = "zoomin"
 bind - "zoomout"
 
+bind p "classmenu"
+
 bind t "messagemode"
 bind y "messagemode2"
 bind u "messagemode3"
