--- a/etmain/default_left.cfg
+++ b/etmain/default_left.cfg
@@ -55,6 +55,8 @@ bind ] "mapzoomin"
 bind = "zoomin"
 bind - "zoomout"
 
+bind P "classmenu"
+
 bind T "messagemode"
 bind Y "messagemode2"
 bind U "messagemode3"
