misc: beautified default config files

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -1,63 +1,62 @@
 // ET: Legacy server sample config file. Make this file your own.
 
 // see http://dev.etlegacy.com/projects/etlegacy/wiki
-//     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars#g_-Additional-or-changed
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
+//     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars
+//
+// Lua server administration suite provided by WolfAdmin
+// see http://dev.timosmit.com/wolfadmin/
 
-// Important note! 
-// Many features like general player management, pm's, features known by ETPro or other common mods 
-// are moved into WolfAdmin we are shipping and installing with our installer.
-// WolfAdmin is enabled per default. Read WolfAdmin documentation: http://dev.timosmit.com/wolfadmin/
 
 // ET LEGACY ENGINE ONLY
 
 // LOGGING & PROTECTION
 
-set logfile "2"						// enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
-set sv_protect "1"					// getstatus response limit protection
-set sv_protectLog "sv_protect.log"	// when set all sv_protect and server security related messages are written into this log file
-set sv_floodProtect "1"				// prevent server flooding
-set sv_pure "1"						// enable hash check of client pk3 files
+set logfile "2"                                 // enables console logging - 'etconsole.log' (1: enabled 2: enabled and sync'ed)
+set sv_protect "1"                              // getstatus response limit protection
+set sv_protectLog "sv_protect.log"              // when set all sv_protect and server security related messages are written into this log file
+set sv_floodProtect "1"                         // prevent server flooding
+set sv_pure "1"                                 // enable hash check of client pk3 files
 
 // NETWORK
 
-set dedicated "2"					// 1: dedicated server for lan 2: dedicated server for internet
-set sv_advert "1"					// send hartbeats to master server - important to set!
-//set net_ip ""						// set to override the default IPv4 ET uses
-//set net_port "27960"				// set to override the default port ET uses
-//set net_ip6 ""					// set to override the default IPv6 ET uses
-//set net_port6 "27960"				// set to override the default port ET uses
-sv_timeout "40"						// seconds without any message from connected clients
-sv_dl_timeout "240"					// seconds without any message from downloading or preparing clients
-set sv_minping "0"					// minimum ping required on connect (0: no minimum)
-set sv_maxping "0"					// maximum ping allowed on connect (0: no maximum)
-set sv_ipMaxClients "0"			    // limits connections per IP to cvar value (0: no maximum)
+set dedicated "2"                               // 1: dedicated server for lan 2: dedicated server for internet
+set sv_advert "1"                               // send hartbeats to master server - important to set!
+//set net_ip ""                                 // set to override the default IPv4 ET uses
+//set net_port "27960"                          // set to override the default port ET uses
+//set net_ip6 ""                                // set to override the default IPv6 ET uses
+//set net_port6 "27960"                         // set to override the default port ET uses
+sv_timeout "40"                                 // seconds without any message from connected clients
+sv_dl_timeout "240"                             // seconds without any message from downloading or preparing clients
+set sv_minping "0"                              // minimum ping required on connect (0: no minimum)
+set sv_maxping "0"                              // maximum ping allowed on connect (0: no maximum)
+set sv_ipMaxClients "0"                         // limits connections per IP to cvar value (0: no maximum)
 
 
 // PASSWORDS & CLIENTS
 
-set g_password ""					// set to password protect the server
-set sv_maxclients "24"				// number of players including private slots
-set sv_privateclients "4"			// if set > 0, then this number of client slots will be reserved for connections
-set sv_privatepassword ""			// that have "password" set to the value of "sv_privatePassword"
-set rconpassword "" 				// remote console access password
-set refereePassword ""				// referee status password
+set g_password ""                               // set to password protect the server
+set sv_maxclients "24"                          // number of players including private slots
+set sv_privateclients "4"                       // if set > 0, then this number of client slots will be reserved for connections
+set sv_privatepassword ""                       // that have "password" set to the value of "sv_privatePassword"
+set rconpassword ""                             // remote console access password
+set refereePassword ""                          // referee status password
 
 // DL, RATE
 
-set sv_maxRate "25000"				// 10000 standard but poor for ET (0: unlimited)
-set sv_dl_maxRate "42000"			// increase/decrease if you have plenty/little spare bandwidth
-set sv_allowDownload "0"			// global toggle for both legacy download and web download
-set sv_wwwDownload "0"				// toggle to enable web download
-set sv_wwwBaseURL "" 				// base URL for redirection
-set sv_wwwDlDisconnected "0"		// tell clients to perform their downloads while disconnected from the server
-set sv_wwwFallbackURL ""			// URL to send to if an http/ftp fails or is refused client side
+set sv_maxRate "25000"                          // 10000 standard but poor for ET (0: unlimited)
+set sv_dl_maxRate "42000"                       // increase/decrease if you have plenty/little spare bandwidth
+set sv_allowDownload "0"                        // global toggle for both legacy download and web download
+set sv_wwwDownload "0"                          // toggle to enable web download
+set sv_wwwBaseURL ""                            // base URL for redirection
+set sv_wwwDlDisconnected "0"                    // tell clients to perform their downloads while disconnected from the server
+set sv_wwwFallbackURL ""                        // URL to send to if an http/ftp fails or is refused client side
 
 // MOTD ETC
 
-set sv_hostname "ET Legacy Host" 				// name of server here
-// max length is "12345678901234567890123456"	// (message should not be longer than this without the color codes)
-set server_motd0 " ^NET Legacy ^7MOTD "			// message in right corner of join screen here
+set sv_hostname "ET Legacy Host"                // name of server here
+// max length is "12345678901234567890123456"   // (message should not be longer than this without the color codes)
+set server_motd0 " ^NET Legacy ^7MOTD "         // message in right corner of join screen here
 set server_motd1 ""
 set server_motd2 ""
 set server_motd3 ""
@@ -66,86 +65,86 @@ set server_motd5 ""
 
 // MISC SETTINGS
 
-set g_heavyWeaponRestriction "100"	// heavy weapon restriction (% of team that have Heavy Weapons)
-set g_antilag "1"					// enable anti-lag
-set g_altStopwatchMode "0"			// enable ABAB stopwatch team format
-set g_autofireteams "1"				// Automaticaly put team players into FireTeams
-set g_complaintlimit "6"			// number of complaints needed to kick a player
-set g_disableComplaints "1"			// disable complaints for airstrike, artillery, mortar and landmines team kills
-set g_ipcomplaintlimit "3"			// number of different player complaints to kick a player
-set g_fastres "0"					// toggles instantly active player after medic revive
-set g_friendlyFire "1"				// toggles Firendly Fire
-set g_minGameClients "8"			// minimum number of players needed to start a match
-set g_maxlives "0"					// number of respawns a player has
-set g_alliedmaxlives "0"			// number of lives available to the allied team
-set g_axismaxlives "0"				// number of lives available to the axis team
-set g_teamforcebalance "1"			// stop players from joining a team with more players
-set g_noTeamSwitching "0"			// disallow players from joining a team with more players
-set g_voiceChatsAllowed "4"			// number of VSays a player can say in 10 seconds
-set g_doWarmup "0"					// players have a warm up period
-set g_warmup "10"					// warm up time (in seconds)
-set g_spectatorInactivity "0"		// duration of spectator inactivity before auto-cick
-set match_latejoin "1"				// allow players to join a match that's already begun
-set match_minplayers "4"			// minimum number of players needed to start a match
-set match_mutespecs "0"				// mute spectators
-set match_readypercent "100"		// % of players 'Ready' to start match
-set match_timeoutcount "0"			// number of timeout allowed
-set match_warmupDamage "1"			// toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
-set team_maxplayers "0"				// maximum number of players that can join each team
-set team_nocontrols "1"				// disallow players from having team control
-set pmove_fixed "0"
-set pmove_msec "8"
+set g_heavyWeaponRestriction "100"              // heavy weapon restriction (% of team that have Heavy Weapons)
+set g_antilag "1"                               // enable anti-lag
+set g_altStopwatchMode "0"                      // enable ABAB stopwatch team format
+set g_autofireteams "1"                         // Automaticaly put team players into FireTeams
+set g_complaintlimit "6"                        // number of complaints needed to kick a player
+set g_disableComplaints "1"                     // disable complaints for airstrike, artillery, mortar and landmines team kills
+set g_ipcomplaintlimit "3"                      // number of different player complaints to kick a player
+set g_fastres "0"                               // toggles instantly active player after medic revive
+set g_friendlyFire "1"                          // toggles Firendly Fire
+set g_minGameClients "8"                        // minimum number of players needed to start a match
+set g_maxlives "0"                              // number of respawns a player has
+set g_alliedmaxlives "0"                        // number of lives available to the allied team
+set g_axismaxlives "0"                          // number of lives available to the axis team
+set g_teamforcebalance "1"                      // stop players from joining a team with more players
+set g_noTeamSwitching "0"                       // disallow players from joining a team with more players
+set g_voiceChatsAllowed "4"                     // number of VSays a player can say in 10 seconds
+set g_doWarmup "0"                              // players have a warm up period
+set g_warmup "10"                               // warm up time (in seconds)
+set g_spectatorInactivity "0"                   // duration of spectator inactivity before auto-cick
+set match_latejoin "1"                          // allow players to join a match that's already begun
+set match_minplayers "4"                        // minimum number of players needed to start a match
+set match_mutespecs "0"                         // mute spectators
+set match_readypercent "100"                    // % of players 'Ready' to start match
+set match_timeoutcount "0"                      // number of timeout allowed
+set match_warmupDamage "1"                      // toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
+set team_maxplayers "0"                         // maximum number of players that can join each team
+set team_nocontrols "1"                         // disallow players from having team control
+set pmove_fixed "0"                             // frame rate independent physics
+set pmove_msec "8"                              // emulated frame rate dependent physics (8: 125 FPS emulated)
 
 // LMS ONLY SETTINGS
 
-set g_lms_teamForceBalance "1"		// force Team Balance
-set g_lms_roundlimit "3"			// number of Rounds per Match
-set g_lms_matchlimit "2"			// number of Matches
-set g_lms_lockTeams "0"				// lock teams during a round
-set g_lms_followTeamOnly "1"		// players can only spectate teammates
+set g_lms_teamForceBalance "1"                  // force Team Balance
+set g_lms_roundlimit "3"                        // number of Rounds per Match
+set g_lms_matchlimit "2"                        // number of Matches
+set g_lms_lockTeams "0"                         // lock teams during a round
+set g_lms_followTeamOnly "1"                    // players can only spectate teammates
 
 // VOTING
 
-set g_allowVote "1"							// enable voting system
-set vote_limit "5"							// number of votes allowed in a map
-set vote_percent "50"						// % of "Yes" votes required to pass
-set vote_allow_config "1"					// allow config changing by vote
-set vote_allow_gametype "1"					// allow gametype changing by vote
-set vote_allow_kick "1"						// allow kick by vote
-set vote_allow_map "1"						// allow map changing by vote
-set vote_allow_matchreset "1"				// allow match reset by vote
-set vote_allow_mutespecs "1"				// allow spectators mute by vote
-set vote_allow_nextmap "1"					// allow changing to next map by vote
-set vote_allow_referee "0"					// allow getting referee status by vote
-set vote_allow_shuffleteamsxp "1"			// allow team XP shuffling by vote
-set vote_allow_shuffleteamsxp_norestart "1"	// allow team XP shuffling no restart by vote
-set vote_allow_shuffleteamssr "1"			// allow team SR shuffling by vote
-set vote_allow_shuffleteamssr_norestart "1"	// allow team SR shuffling no restart by vote
-set vote_allow_swapteams "1"				// allow team swapping by vote
-set vote_allow_friendlyfire "1"				// allow friendly fire toggling by vote
-set vote_allow_timelimit "0"				// allow map time limit changing by vote
-set vote_allow_warmupdamage "1"				// allow warmup damage toggling by vote
-set vote_allow_antilag "1"					// allow toggling Anti Lag setting by vote
-set vote_allow_balancedteams "1"			// allow toggling Balanced teams by vote
-set vote_allow_muting "1"					// allow player muting by vote
-set vote_allow_surrender "1"				// allow surrender by vote
-set vote_allow_restartcampaign "1"			// allow restart campaign by vote
-set vote_allow_nextcampaign "1"				// allow next campaign by vote
-set vote_allow_poll "1"						// allow free polls by vote
+set g_allowVote "1"                             // enable voting system
+set vote_limit "5"                              // number of votes allowed in a map
+set vote_percent "50"                           // % of "Yes" votes required to pass
+set vote_allow_config "1"                       // allow config changing by vote
+set vote_allow_gametype "1"                     // allow gametype changing by vote
+set vote_allow_kick "1"                         // allow kick by vote
+set vote_allow_map "1"                          // allow map changing by vote
+set vote_allow_matchreset "1"                   // allow match reset by vote
+set vote_allow_mutespecs "1"                    // allow spectators mute by vote
+set vote_allow_nextmap "1"                      // allow changing to next map by vote
+set vote_allow_referee "0"                      // allow getting referee status by vote
+set vote_allow_shuffleteamsxp "1"               // allow team XP shuffling by vote
+set vote_allow_shuffleteamsxp_norestart "1"     // allow team XP shuffling no restart by vote
+set vote_allow_shuffleteamssr "1"               // allow team SR shuffling by vote
+set vote_allow_shuffleteamssr_norestart "1"     // allow team SR shuffling no restart by vote
+set vote_allow_swapteams "1"                    // allow team swapping by vote
+set vote_allow_friendlyfire "1"                 // allow friendly fire toggling by vote
+set vote_allow_timelimit "0"                    // allow map time limit changing by vote
+set vote_allow_warmupdamage "1"                 // allow warmup damage toggling by vote
+set vote_allow_antilag "1"                      // allow toggling Anti Lag setting by vote
+set vote_allow_balancedteams "1"                // allow toggling Balanced teams by vote
+set vote_allow_muting "1"                       // allow player muting by vote
+set vote_allow_surrender "1"                    // allow surrender by vote
+set vote_allow_restartcampaign "1"              // allow restart campaign by vote
+set vote_allow_nextcampaign "1"                 // allow next campaign by vote
+set vote_allow_poll "1"                         // allow free polls by vote
 
 // MOD CFG - put mod related vars in an own config
 exec legacy.cfg
 
 // MAP ROTATION - set the game type
 
-//exec campaigncycle.cfg			// Campaign mode
-//exec objectivecycle.cfg			// Objective mode
-//exec lmscycle.cfg					// Last Man Standing mode
-exec mapvotecycle.cfg				// Map Voting mode
+//exec campaigncycle.cfg                        // Campaign mode
+//exec objectivecycle.cfg                       // Objective mode
+//exec lmscycle.cfg                             // Last Man Standing mode
+exec mapvotecycle.cfg                           // Map Voting mode
 
 // WATCHDOG
 
 // in case the game dies with an ERR_DROP
 // or any situation leading to server running with no map
-//set com_watchdog "60"							// defaults 60
-set com_watchdog_cmd "exec mapvotecycle.cfg"	// defaults to quit
+//set com_watchdog "60"                         // defaults 60
+set com_watchdog_cmd "exec mapvotecycle.cfg"    // defaults to quit
