--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -1,20 +1,18 @@
 // ET: Legacy legacy mod sample config file. Make this file your own.
 
 // see http://dev.etlegacy.com/projects/etlegacy/wiki
-//     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars#g_-Additional-or-changed
 //     http://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
+//     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars
+//
+// Lua server administration suite provided by WolfAdmin
+// see http://dev.timosmit.com/wolfadmin/
 
-
-// Important note! 
-// Many features like general player management, pm's, features known by ETPro or other common mods 
-// are moved into WolfAdmin we are shipping and installing with our installer.
-// WolfAdmin is enabled per default. Read WolfAdmin documentation: http://dev.timosmit.com/wolfadmin/ 
 
 // LOGGING & PROTECTION
 
-set g_log ""						// Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
-set g_logSync "1"					// Game logging options (0: buffered 1: sync'ed)
-set g_protect "0"					// Mod side security options
+set g_log ""                                    // Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
+set g_logSync "1"                               // Game logging options (0: buffered 1: sync'ed)
+set g_protect "0"                               // Mod side security options
 
 // OPTIMIZATIONS
 
