--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -1,11 +1,11 @@
 // ET: Legacy server sample config file. Make this file your own.
 
-// see http://dev.etlegacy.com/projects/etlegacy/wiki
-//     http://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
-//     http://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars
+// see https://dev.etlegacy.com/projects/etlegacy/wiki
+//     https://dev.etlegacy.com/projects/etlegacy/wiki/Set_up_Features
+//     https://dev.etlegacy.com/projects/etlegacy/wiki/List_of_Cvars
 //
 // Lua server administration suite provided by WolfAdmin
-// see http://dev.timosmit.com/wolfadmin/
+// see https://dev.timosmit.com/wolfadmin/
 
 
 // ET LEGACY ENGINE ONLY
