misc: updated wolfadmin path in default config

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -71,7 +71,7 @@ set g_intermissionReadyPercent "60"
 
 // LUA
 
-set lua_modules "luamods/wolfadmin/main.lua"
+set lua_modules "luascripts/wolfadmin/main.lua"
 set lua_allowedModules ""
 
 // OMNI-BOT
@@ -80,8 +80,8 @@ set omnibot_enable "1"
 set omnibot_path "./legacy/omni-bot"
 //set omnibot_flags "0"
 //set omnibot_logsize "0"
-bot difficulty 4
-bot moveskill 4
+bot difficulty "4"
+bot moveskill "4"
 bot minbots "-1"
 bot maxbots "12"
-bot balanceteams 1
+bot balanceteams "1"
