client: added pak isolation support
refs #1161 #1165

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ option(FEATURE_JANSSON			"Enable JSON support (client)"							OFF)
 option(FEATURE_SERVERMDX		"Enable MDX support on server side (mod)"				ON)
 option(FEATURE_DBMS				"Enable dbms support (sqlite3)"							ON)
 option(FORCE_DEBUG				"Force enable legacy debug macros"						OFF)
+option(FEATURE_PAKISOLATION		"Enables custom pak isolation"							ON)
 
 cmake_dependent_option(FEATURE_LUASQL	"Enable LuaSQL sqlite3 backend (mod)"			ON "FEATURE_LUA" OFF)
 cmake_dependent_option(FEATURE_RATING	"Enable skill rating support (mod)"				ON "FEATURE_DBMS" OFF)
