misc: add g_mapScriptDirectory & value to legacy.cfg

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -62,6 +62,8 @@ set g_customConfig ""
 set g_intermissionTime "30"
 set g_intermissionReadyPercent "60"
 
+set g_mapScriptDirectory "mapscripts"
+
 // MAP VOTING
 
 //set g_excludedMaps "railgun"
