misc: update client config files (clean cube images only, no longer delete '~' and 'z' pk3s, r2 starter cfg)

--- a/etmain/clean_full.cfg
+++ b/etmain/clean_full.cfg
@@ -1,1 +1,2 @@
-clean all *.tmp *.pk3 cm_*.tga
+// Warning: This is cleaning all downloaded pk3 file and created cube images in fs_homepath
+clean all *.tmp *.pk3 *cm_*.tga
