--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -24,6 +24,8 @@ init
   setl g_soldierChargeTime "30000"
   setl g_covertopschargetime "30000"
   setl g_landminetimeout "0"
+  setl g_dropAmmo "0"
+  setl g_dropHealth "0"
   setl g_teamForceBalance "0"
   setl g_filtercams "1"
   setl g_fastres "0"
