--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -23,6 +23,7 @@ init
   setl g_engineerChargeTime "30000"
   setl g_soldierChargeTime "30000"
   setl g_covertopschargetime "30000"
+  setl g_stickyCharge "2"
   setl g_landminetimeout "0"
   setl g_dropAmmo "0"
   setl g_dropHealth "0"
