--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -64,7 +64,7 @@ init
   setl sv_maxping "0"
 
   setl pmove_fixed "0"
-  set nextmap ""
+  set nextmap "map_restart 0"
 
   setl g_allowVote "1"
   setl vote_allow_balancedteams "0"
