--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -27,7 +27,13 @@ init
 	setl sv_floodProtect "0"
 	setl sv_fps "20"
 	setl vote_limit "5"
-	
+
+	// reset cvars which might be set (but no changed) when switching from public to comp configs
+	set g_userTimeLimit "0"
+	setl g_useralliedrespawntime "0"
+	setl g_useraxisrespawntime "0"
+	setl g_moverScale "1"
+
 	//command "sv_cvarempty"
 	command "sv_cvar com_maxfps IN 40 125"
 }
