--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -29,7 +29,7 @@ init
 	setl vote_limit "5"
 
 	// reset cvars which might be set (but no changed) when switching from public to comp configs
-	set g_userTimeLimit "0"
+	setl g_userTimeLimit "0"
 	setl g_useralliedrespawntime "0"
 	setl g_useraxisrespawntime "0"
 	setl g_moverScale "1"
