--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -7,32 +7,32 @@ public
 
 init
 {
-	setl g_altStopwatchMode "0"
-	setl g_complaintlimit "6"
-	setl g_ipcomplaintlimit "3"
-	setl g_doWarmup "0"
-	setl g_maxlives "0"
-	setl g_teamforcebalance "1"
-	setl g_noTeamSwitching "0"
-	setl g_lms_teamForceBalance "1"
-	setl g_voicechatsallowed "5"
-	setl g_warmup "30"
-	setl match_latejoin "1"
-	setl match_mutespecs "1"
-	setl match_timeoutcount "0"
-	setl match_warmupDamage "0"
-	setl team_maxplayers "0"
-	setl team_nocontrols "1"
-	setl sv_allowDownload "1"
-	setl sv_floodProtect "0"
-	setl sv_fps "20"
-	setl vote_limit "5"
+	set g_altStopwatchMode "0"
+	set g_complaintlimit "6"
+	set g_ipcomplaintlimit "3"
+	set g_doWarmup "0"
+	set g_maxlives "0"
+	set g_teamforcebalance "1"
+	set g_noTeamSwitching "0"
+	set g_lms_teamForceBalance "1"
+	set g_voicechatsallowed "5"
+	set g_warmup "30"
+	set match_latejoin "1"
+	set match_mutespecs "1"
+	set match_timeoutcount "0"
+	set match_warmupDamage "0"
+	set team_maxplayers "0"
+	set team_nocontrols "1"
+	set sv_allowDownload "1"
+	set sv_floodProtect "0"
+	set sv_fps "20"
+	set vote_limit "5"
 
 	// reset cvars which might be set (but no changed) when switching from public to comp configs
-	setl g_userTimeLimit "0"
-	setl g_useralliedrespawntime "0"
-	setl g_useraxisrespawntime "0"
-	setl g_moverScale "1"
+	set g_userTimeLimit "0"
+	set g_useralliedrespawntime "0"
+	set g_useraxisrespawntime "0"
+	set g_moverScale "1"
 
 	//command "sv_cvarempty"
 	command "sv_cvar com_maxfps IN 40 125"
