mod: adjusted default cvar values in code and configs, fixes #1272

--- a/etmain/configs/defaultcomp.config
+++ b/etmain/configs/defaultcomp.config
@@ -27,7 +27,15 @@ init
 	setl vote_limit "10"
 
 	setl g_pronedelay "1"
-	
+	setl g_shove "60"
+
+	setl g_antiwarp "1"
+	setl g_fixedphysics "1"
+	setl g_fixedphysicsfps "125"
+
 	//command "sv_cvarempty"
+	command "sv_cvar rate EQ 25000"
+	command "sv_cvar cl_maxpackets EQ 125"
+	command "sv_cvar snaps EQ 20"
 	command "sv_cvar com_maxfps IN 40 125"
 }
