--- a/etmain/configs/defaultpublic.config
+++ b/etmain/configs/defaultpublic.config
@@ -28,6 +28,13 @@ init
 	set sv_fps "20"
 	set vote_limit "5"
 
+	set g_pronedelay "0"
+	set g_shove "60"
+
+	set g_antiwarp "1"
+	set g_fixedphysics "1"
+	set g_fixedphysicsfps "125"
+
 	// reset cvars which might be set (but no changed) when switching from public to comp configs
 	set g_userTimeLimit "0"
 	set g_useralliedrespawntime "0"
@@ -35,5 +42,8 @@ init
 	set g_moverScale "1"
 
 	//command "sv_cvarempty"
+	command "sv_cvar rate EQ 25000"
+	command "sv_cvar cl_maxpackets EQ 125"
+	command "sv_cvar snaps EQ 20"
 	command "sv_cvar com_maxfps IN 40 125"
 }
