game: reworked airstrike and artillery restriction, refs #1254
* Implement arty/aistrike limitation as per etpro
* Changed team_airstrikeTime/artyTime cvars to team_maxAirtrike
  and team_maxArtillery to override default computed value per minutes
* Get rid of g_misc 4 G_MISC_ARTY_STRIKE_COMBINE

--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -44,8 +44,8 @@ set team_maxFlamers "-1"
 set team_maxMg42s "-1"
 set team_maxPanzers "-1"
 set team_maxRiflegrenades "-1"
-set team_airstrikeTime "20"
-set team_artyTime "20"
+set team_maxAirstrikes "0"
+set team_maxArtillery "0"
 set g_maxTeamLandmines "10"
 
 // MISC
