game: renamed team_maxMg42s/maxPanzers to generic names
Because we have new allies weapon models
Backward compatibility is kept

--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -44,9 +44,9 @@ init
   setl team_maxCovertops "0"
 
   setl team_maxFlamers "0"
-  setl team_maxMg42s "0"
+  setl team_maxMachineguns "0"
   setl team_maxMortars "0"
-  setl team_maxPanzers "0"
+  setl team_maxRockets "0"
   setl team_maxRiflegrenades "0"
   setl team_maxLandmines "0"
 
