--- a/etmain/configs/legacy5.config
+++ b/etmain/configs/legacy5.config
@@ -44,9 +44,9 @@ init
   setl team_maxCovertops "-1"
 
   setl team_maxFlamers "1"
-  setl team_maxMg42s "1"
+  setl team_maxMachineguns "1"
   setl team_maxMortars "0"
-  setl team_maxPanzers "1"
+  setl team_maxRockets "1"
   setl team_maxRiflegrenades "1"
 
   setl match_latejoin "1"
