--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -41,8 +41,8 @@ set team_maxCovertops "-1"
 
 set team_maxMortars "-1"
 set team_maxFlamers "-1"
-set team_maxMg42s "-1"
-set team_maxPanzers "-1"
+set team_maxMachineguns "-1"
+set team_maxRockets "-1"
 set team_maxRiflegrenades "-1"
 set team_maxAirstrikes "0"
 set team_maxArtillery "0"
