misc: adjusted configs, refs #1254

--- a/etmain/configs/defaultcomp.config
+++ b/etmain/configs/defaultcomp.config
@@ -26,6 +26,9 @@ init
 	setl sv_fps "20"
 	setl vote_limit "10"
 
+	setl team_maxAirstrikes "0"
+	setl team_maxArtillery "0"
+
 	setl g_pronedelay "1"
 	setl g_shove "60"
 
