--- a/etmain/configs/legacy1.config
+++ b/etmain/configs/legacy1.config
@@ -50,6 +50,9 @@ init
   setl team_maxRiflegrenades "0"
   setl team_maxLandmines "0"
 
+  setl team_maxAirstrikes "0"
+  setl team_maxArtillery "0"
+
   setl match_latejoin "1"
   setl match_minplayers "2"
   setl match_mutespecs "0"
