--- a/etmain/configs/legacy5.config
+++ b/etmain/configs/legacy5.config
@@ -49,6 +49,9 @@ init
   setl team_maxRockets "1"
   setl team_maxRiflegrenades "1"
 
+  setl team_maxAirstrikes "0"
+  setl team_maxArtillery "0"
+
   setl match_latejoin "1"
   setl match_minplayers "2"
   setl match_mutespecs "0"
