--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
 
     <!-- Allow access to internet -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Allow writing to external storage -->
+    <!-- Allow writing to external storage and reading from it -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- Allow access to the vibrator -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
