--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -46,11 +46,11 @@ set team_maxRockets "-1"
 set team_maxRiflegrenades "-1"
 set team_maxAirstrikes "0"
 set team_maxArtillery "0"
-set g_maxTeamLandmines "10"
+set team_maxLandmines "10"
 
 // MISC
 
-set g_shove "80"
+set g_shove "60"
 set g_misc "0"
 set g_dropAmmo "2"
 set g_dropHealth "2"
